--- a/index.html
+++ b/index.html
@@ -47,8 +47,17 @@
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-8">
-                <div class="logSlider row justify-content-center">
-
+                <div class="logSlider row">
+                    <div class="p-3">
+                        <div class="row">
+                            <div class="col-12 text-left">
+                                <h5>Sign In to: <span class="color-one">Edit Projects</span></h5>
+                            </div>
+                            <div class="col-12 py-5">
+                                <img src="./assets/sliderplaceholder.jpg" alt="sliderimg" class="img-fluid">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-11 col-md-4 form-card border rounded p-5">
@@ -91,7 +100,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-    <script src="./js/app.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
