--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
                             </div>
                         </div>
                     </div>
+                    <div class="p-3">
+                        <div class="row">
+                            <div class="col-12 text-left">
+                                <h5>Sign In to: <span class="color-one">Edit Projects</span></h5>
+                            </div>
+                            <div class="col-12 py-5">
+                                <img src="./assets/sliderplaceholder.jpg" alt="sliderimg" class="img-fluid">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-11 col-md-4 form-card border rounded p-5">
