--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-8">
-                <div class="logSlider row">
+                <div class="row" id="logSlider">
                     <div class="p-3">
                         <div class="row">
                             <div class="col-12 text-left">
