--- a/index.html
+++ b/index.html
@@ -111,6 +111,13 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+    <script>
+        window.onload(
+            document.getElementById('logSlider').slick({
+                infinite: true
+            })
+        )
+    </script>
     <script src="./js/main.js"></script>
 </body>
 
