--- a/index.html
+++ b/index.html
@@ -112,11 +112,12 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
     <script>
-        window.onload(
-            document.getElementById('logSlider').slick({
+
+        $(document).ready(function () {
+            $('.your-class').slick({
                 infinite: true
-            })
-        )
+            });
+        });
     </script>
     <script src="./js/main.js"></script>
 </body>
