--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <script>
 
         $(document).ready(function () {
-            $('.your-class').slick({
+            $('.logSlider').slick({
                 infinite: true
             });
         });
