--- a/SignUp.html
+++ b/SignUp.html
@@ -14,6 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <script src="https://kit.fontawesome.com/8ed589f1d4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -38,17 +40,61 @@
                         <li class="nav-item mx-4 text-white">Gallery</li>
                         <li class="nav-item mx-4 text-white">Contact Us</li>
                     </ul>
-                    <button class="btn btn-primary-filled ml-auto mr-0 mr-md-5">Strat Now</button>
+                    <button class="btn btn-primary-filled ml-auto mr-0 mr-md-5">Start Now</button>
                 </div>
             </div>
         </div>
 
     </div>
-    <div class="container py-5">
+    <div class="container mb-5 mt-0 my-md-5">
         <div class="row justify-content-center">
-            <div class="col-6">
-                <div class="LogSlider row justify-content-center">
+            <div class="col-11 col-md-6">
+                <div class="row logSlider">
+                    <div class="px-3 py-5 pt-md-5 pb-md-0">
+                        <div class="row">
+                            <div class="col-12 text-left my-2 my-md-0">
+                                <h6><span class="pr-3">Sign Up to</span> <span class="text-underline-one">Edit
+                                        Projects</span></h6>
+                            </div>
+                            <div class="col-12 imgContainer">
+                                <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
+                                    <img src="./assets/sliderImg1.png" alt="sliderimg"
+                                        class="img-fluid h-100 w-100 sliderImg">
+                                </div>
 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="px-3 py-5 pt-md-5 pb-md-0">
+                        <div class="row">
+                            <div class="col-12 text-left">
+                                <h6><span class="pr-3">Sign Up to</span><span class="text-underline-one">Add new
+                                        projcets</span></h6>
+                            </div>
+                            <div class="col-12 imgContainer">
+                                <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
+                                    <img src="./assets/sliderImg2.jpg" alt="sliderimg"
+                                        class="img-fluid h-100 w-100 sliderImg">
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="px-3 py-5 pt-md-5 pb-md-0">
+                        <div class="row">
+                            <div class="col-12 text-left">
+                                <h6><span class="pr-3">Sign Up to</span> <span class="text-underline-one">Have a
+                                        Dashboard</span></h6>
+                            </div>
+                            <div class="col-12 imgContainer">
+                                <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
+                                    <img src="./assets/sliderImg3.jpg" alt="sliderimg"
+                                        class="img-fluid h-100 w-100 sliderImg">
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-11 col-md-6 form-card border rounded p-5">
@@ -81,32 +127,39 @@
                 </div>
 
                 <div class="my-5">
-                    <a href="#" class="btn btn-primary"> Sign Up</a>
+                    <a href="./Plan.html" class="btn btn-primary"> Sign Up</a>
                 </div>
 
                 <div class="my-2">
-                    Have an account? <span class="color-one">Sign In</span>
+                    Have an account? <a href="./index.html" class="color-one">Sign In</a>
                 </div>
 
             </div>
         </div>
     </div>
+    <div class="container-fluid bg-black text-muted">
+        <div class="row">
+            <div class="col-12 align-self-center">
+                <p class="small-text m-0">Copyright Â© 2020 Desing by O-Projects</p>
+            </div>
+        </div>
+    </div>
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-    <script src="./js/app.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
