--- a/index.html
+++ b/index.html
@@ -46,33 +46,58 @@
         </div>
 
     </div>
-    <div class="container mt-5">
+    <div class="container mb-5 mt-0 my-md-5">
         <div class="row justify-content-center">
-            <div class="col-8">
-                <div class="row" id="logSlider">
-                    <div class="p-3">
+            <div class="col-11 col-md-7 col-lg-8">
+                <div class="row logSlider">
+                    <div class="px-3 py-5 pt-md-5 pb-md-0">
                         <div class="row">
-                            <div class="col-12 text-left">
-                                <h5>Sign In to: <span class="color-one">Edit Projects</span></h5>
+                            <div class="col-12 text-left my-2 my-md-0">
+                                <h6><span class="pr-3">Sign In to</span> <span class="text-underline-one">Edit
+                                        Projects</span></h6>
                             </div>
-                            <div class="col-12 py-5">
-                                <img src="./assets/sliderplaceholder.jpg" alt="sliderimg" class="img-fluid">
+                            <div class="col-12 imgContainer">
+                                <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
+                                    <img src="./assets/sliderImg1.png" alt="sliderimg"
+                                        class="img-fluid h-100 w-100 sliderImg">
+                                </div>
+
                             </div>
                         </div>
                     </div>
-                    <div class="p-3">
+                    <div class="px-3 py-5 pt-md-5 pb-md-0">
                         <div class="row">
                             <div class="col-12 text-left">
-                                <h5>Sign In to: <span class="color-one">Edit Projects</span></h5>
+                                <h6><span class="pr-3">Sign In to</span><span class="text-underline-one">Add new
+                                        projcets</span></h6>
                             </div>
-                            <div class="col-12 py-5">
-                                <img src="./assets/sliderplaceholder.jpg" alt="sliderimg" class="img-fluid">
+                            <div class="col-12 imgContainer">
+                                <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
+                                    <img src="./assets/sliderImg2.jpg" alt="sliderimg"
+                                        class="img-fluid h-100 w-100 sliderImg">
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="px-3 py-5 pt-md-5 pb-md-0">
+                        <div class="row">
+                            <div class="col-12 text-left">
+                                <h6><span class="pr-3">Sign In to</span> <span class="text-underline-one">Have a
+                                        Dashboard</span></h6>
+                            </div>
+                            <div class="col-12 imgContainer">
+                                <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
+                                    <img src="./assets/sliderImg3.jpg" alt="sliderimg"
+                                        class="img-fluid h-100 w-100 sliderImg">
+                                </div>
+
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-11 col-md-4 form-card border rounded p-5">
+            <div class="col-11 col-md-5 col-lg-4 form-card border rounded p-5">
                 <h5>Welcome to ARooh!</h5>
                 <div class="mt-5 mb-2">
                     <p class="text-muted mb-0">Username</p>
@@ -91,9 +116,18 @@
                 </div>
 
                 <div class="my-2">
-                    <span class="small-text"> Have no account? </span><span class="color-one">Sign Up</span>
+                    <span class="small-text"> Have no account? </span><a href="./SignUp.html" class="color-one">Sign
+                        Up</a>
                 </div>
 
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid bg-black text-muted">
+        <div class="row">
+            <div class="col-12 align-self-center">
+                <p class="small-text m-0">Copyright Â© 2020 Desing by O-Projects</p>
             </div>
         </div>
     </div>
@@ -111,14 +145,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-    <script>
-
-        $(document).ready(function () {
-            $('.logSlider').slick({
-                infinite: true
-            });
-        });
-    </script>
     <script src="./js/main.js"></script>
 </body>
 
