--- a/Plan.html
+++ b/Plan.html
@@ -14,6 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <script src="https://kit.fontawesome.com/8ed589f1d4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -44,15 +46,18 @@
         </div>
 
     </div>
+
+
+
     <div class="container py-5">
-        <div class="row ">
+        <div class="row justify-content-center">
             <div class="col-12 p-5">
-                <h4 class="color-one">Choose a plan!</h4>
+                <h4><span class="text-underline-one">Choose a plan!</span></h4>
             </div>
-            <div class="col-3 px-5">
+            <div class="col-10 col-lg-3 px-5 my-2 my-lg-0">
                 <div class="row">
                     <div class="col-12 form-card px-0">
-                        <div class="text-center border-bottom py-3">
+                        <div class="text-center border h5 planCardHeader py-3">
                             7 DAYS
                         </div>
                         <div class="text-left pl-4">
@@ -62,90 +67,108 @@
                             <h6 class="my-3">- Full Dashboard</h6>
                             <h6 class="mt-3 mb-5">- Full Dashboard</h6>
                         </div>
-                        <div class="text-center offerBtn border-top py-3">
-                            Free trial
+                        <div class="text-center btn btn-primary-filled w-100 border planCardFooter py-3">
+                            Free Trial
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-3 px-5">
+            <div class="col-10 col-lg-3 px-5 my-2 my-lg-0">
                 <div class="row">
                     <div class="col-12 form-card px-0">
-                        <div class="text-center border-bottom py-3">
-                            7 DAYS
+                        <div class="text-center h5 border planCardHeader py-3">
+                            1 Month
                         </div>
                         <div class="text-left pl-4">
-                            <h4 class="mt-3 mb-5">0$</h4>
-                            <h6 class="my-3">- 12 Projects</h6>
-                            <h6 class="my-3">- Unlimited Storage</h6>
-                            <h6 class="my-3">- Full Dashboard</h6>
-                            <h6 class="mt-3 mb-5">- Full Dashboard</h6>
+                            <h4 class="mt-3 mb-5">10$ <span class="text-muted h5">/Month</span></h4>
+                            <h6 class="my-3"><i class="fa fa-check text-success pr-1" aria-hidden="true"></i>Unlimited
+                                Storage</h6>
+                            <h6 class="my-3"><i class="fa fa-check text-success pr-1" aria-hidden="true"></i>Unlimited
+                                Storage</h6>
+                            <h6 class="my-3"><i class="fa fa-times text-danger pr-2" aria-hidden="true"></i>White Label
+                            </h6>
+                            <h6 class="mt-3 mb-5"><i class="fa fa-times text-danger pr-2" aria-hidden="true"></i>White
+                                Label</h6>
                         </div>
-                        <div class="text-center border-top py-3">
-                            Free trial
+                        <div class="text-center btn btn-primary-filled w-100 border planCardFooter py-3">
+                            Select plan
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-3 px-5">
+            <div class="col-10 col-lg-3 px-5 my-2 my-lg-0">
                 <div class="row">
-                    <div class="col-12 form-card px-0">
-                        <div class="text-center border-bottom py-3">
-                            7 DAYS
-                        </div>
-                        <div class="text-left pl-4">
-                            <h4 class="mt-3 mb-5">0$</h4>
-                            <h6 class="my-3">- 12 Projects</h6>
-                            <h6 class="my-3">- Unlimited Storage</h6>
-                            <h6 class="my-3">- Full Dashboard</h6>
-                            <h6 class="mt-3 mb-5">- Full Dashboard</h6>
-                        </div>
-                        <div class="text-center border-top py-3">
-                            Free trial
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3 px-5">
-                <div class="row">
-                    <div class="col-12 form-card px-0">
-                        <div class="text-center border-bottom py-3">
-                            7 DAYS
-                        </div>
-                        <div class="text-left pl-4">
-                            <h4 class="mt-3 mb-5">0$</h4>
-                            <h6 class="my-3">- 12 Projects</h6>
-                            <h6 class="my-3">- Unlimited Storage</h6>
-                            <h6 class="my-3">- Full Dashboard</h6>
-                            <h6 class="mt-3 mb-5">- Full Dashboard</h6>
-                        </div>
-                        <div class="text-center border-top py-3">
-                            Free trial
-                        </div>
-                    </div>
-                </div>
-            </div>
+                    <div class="col-12 form-card px-0 overflow-hidden">
+                        <div class="corner-ribbon bottom-left sticky orange small-text">Best Offer</div>
 
-
-
+                        <div class="text-center h5 border planCardHeader py-3">
+                            3 Months
+                        </div>
+                        <div class="text-left pl-4">
+                            <h4 class="mt-3 mb-5">10$ <span class="text-muted h5">/Month</span></h4>
+                            <h6 class="my-3"><i class="fa fa-check text-success pr-1" aria-hidden="true"></i>Unlimited
+                                Storage</h6>
+                            <h6 class="my-3"><i class="fa fa-check text-success pr-1" aria-hidden="true"></i>Unlimited
+                                Storage</h6>
+                            <h6 class="my-3"><i class="fa fa-check text-success pr-1" aria-hidden="true"></i>Full
+                                Dashboard
+                            </h6>
+                            <h6 class="mt-3 mb-5"><i class="fa fa-times text-danger pr-2" aria-hidden="true"></i>White
+                                Label</h6>
+                        </div>
+                        <div class="text-center btn btn-primary-filled w-100 border planCardFooter py-3">
+                            Select plan
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-10 col-lg-3 px-5 my-2 my-lg-0">
+                <div class="row">
+                    <div class="col-12 form-card px-0">
+                        <div class="text-center h5 border planCardHeader py-3">
+                            6 Months
+                        </div>
+                        <div class="text-left pl-4">
+                            <h4 class="mt-3 mb-5">10$ <span class="text-muted h5">/Month</span></h4>
+                            <h6 class="my-3"><i class="fa fa-check text-success pr-1" aria-hidden="true"></i>Unlimited
+                                Storage</h6>
+                            <h6 class="my-3"><i class="fa fa-check text-success pr-1" aria-hidden="true"></i>Unlimited
+                                Storage</h6>
+                            <h6 class="my-3"><i class="fa fa-check text-success pr-1" aria-hidden="true"></i>Full
+                                Dashboard
+                            </h6>
+                            <h6 class="mt-3 mb-5"><i class="fa fa-check text-success pr-1" aria-hidden="true"></i>White
+                                Label</h6>
+                        </div>
+                        <div class="text-center btn btn-primary-filled w-100 border planCardFooter py-3">
+                            Select plan
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid bg-black text-muted">
+        <div class="row">
+            <div class="col-12 align-self-center">
+                <p class="small-text m-0">Copyright Â© 2020 Desing by O-Projects</p>
+            </div>
         </div>
     </div>
 
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-    <script src="./js/app.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
