--- a/Plan.html
+++ b/Plan.html
@@ -40,7 +40,7 @@
                         <li class="nav-item mx-4 text-white">Gallery</li>
                         <li class="nav-item mx-4 text-white">Contact Us</li>
                     </ul>
-                    <button class="btn btn-primary-filled ml-auto mr-0 mr-md-5">Strat Now</button>
+                    <button class="btn btn-primary-filled ml-auto mr-0 mr-md-5">Start Now</button>
                 </div>
             </div>
         </div>
