--- a/SignUp.html
+++ b/SignUp.html
@@ -51,7 +51,7 @@
     <v-app id="app">
         <div class="container mb-5 mt-0 my-md-5">
             <div class="row justify-content-center">
-                <div class="col-11 col-md-6">
+                <div class="col-11 col-md-4">
                     <div class="row logSlider">
                         <div class="px-3 py-5 pt-md-5 pb-md-0">
                             <div class="row">
@@ -100,71 +100,75 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-11 col-md-6 form-card border rounded p-5 test">
-                    <h5>Create New Account!</h5>
-                    <div class="form-row">
-                        <v-form class="w-100">
-                            <v-container class="border-bottom">
-                                <v-row>
-                                    <v-col class="col-12 col-md-6">
-                                        <v-text-field label="First name"></v-text-field>
-                                    </v-col>
-                                    <v-col class="col-12 col-md-6">
-                                        <v-text-field label="Last name"></v-text-field>
-                                    </v-col>
-                                    <div class="col-12 py-0 my-md-0">
-                                        <v-radio-group row>
-                                            <p class="m-0 pr-2 text-muted">Gender</p>
-                                            <div class="col-12 d-md-none"></div>
-                                            <v-radio label="Male"></v-radio>
-                                            <v-radio label="Female"></v-radio>
-                                        </v-radio-group>
-                                    </div>
-                                </v-row>
-                            </v-container>
-                            <v-container class="border-bottom">
-                                <v-row>
-                                    <v-col class="col-12 col-md-6">
-                                        <v-text-field label="Email"></v-text-field>
-                                    </v-col>
-                                    <v-col class="col-12 col-md-6">
-                                        <v-text-field label="Phone Number"></v-text-field>
-                                    </v-col>
-                                    <v-col class="col-12 col-md-6">
-                                        <v-text-field label="Password" :append-icon="show1 ? 'mdi-eye' : 'mdi-eye-off'"
-                                            :type="show1 ? 'text' : 'password'" @click:append="show1 = !show1">
-                                        </v-text-field>
-                                    </v-col>
-                                    <v-col class="col-12 col-md-6">
-                                        <v-text-field label="Confirm Password"
-                                            :append-icon="show2 ? 'mdi-eye' : 'mdi-eye-off'"
-                                            :type="show2 ? 'text' : 'password'" @click:append="show2 = !show2">
-                                        </v-text-field>
-                                    </v-col>
-                                </v-row>
-                            </v-container>
-                            <v-container>
-                                <v-row>
-                                    <v-col class="col-12 col-md-6">
-                                        <v-text-field label="Company Name"></v-text-field>
-                                    </v-col>
-                                    <v-col class="col-12 col-md-6 p-0"></v-col>
-                                    <v-col class="col-12 col-md-6">
-                                        <v-select :items="industry" label="Industry"></v-select>
-                                    </v-col>
-                                    <v-col class="col-12 col-md-6">
-                                        <v-select :items="role" label="Role"></v-select>
-                                    </v-col>
-                                    <div class="btn btn-primary">Sign In</div>
-                                    <div class="my-2 col-12 px-0">
-                                        <span class="small-text"> Have no account? </span><a href="./SignUp.html"
-                                            class="color-one">Sign
-                                            Up</a>
-                                    </div>
-                                </v-row>
-                            </v-container>
+                <div class="col-11 col-md-8 p-5">
+                    <div class="col-12 form-card border test p-5">
+                        <h5>Create New Account!</h5>
+                        <div class="form-row">
+                            <v-form class="w-100">
+                                <v-container class="border-bottom">
+                                    <v-row>
+                                        <v-col class="col-12 col-md-6">
+                                            <v-text-field label="First name"></v-text-field>
+                                        </v-col>
+                                        <v-col class="col-12 col-md-6">
+                                            <v-text-field label="Last name"></v-text-field>
+                                        </v-col>
+                                        <div class="col-12 py-0 my-md-0">
+                                            <v-radio-group row>
+                                                <p class="m-0 pr-2 text-muted">Gender</p>
+                                                <div class="col-12 d-md-none"></div>
+                                                <v-radio label="Male"></v-radio>
+                                                <v-radio label="Female"></v-radio>
+                                            </v-radio-group>
+                                        </div>
+                                    </v-row>
+                                </v-container>
+                                <v-container class="border-bottom">
+                                    <v-row>
+                                        <v-col class="col-12 col-md-6">
+                                            <v-text-field label="Email"></v-text-field>
+                                        </v-col>
+                                        <v-col class="col-12 col-md-6">
+                                            <v-text-field label="Phone Number"></v-text-field>
+                                        </v-col>
+                                        <v-col class="col-12 col-md-6">
+                                            <v-text-field label="Password"
+                                                :append-icon="show1 ? 'mdi-eye' : 'mdi-eye-off'"
+                                                :type="show1 ? 'text' : 'password'" @click:append="show1 = !show1">
+                                            </v-text-field>
+                                        </v-col>
+                                        <v-col class="col-12 col-md-6">
+                                            <v-text-field label="Confirm Password"
+                                                :append-icon="show2 ? 'mdi-eye' : 'mdi-eye-off'"
+                                                :type="show2 ? 'text' : 'password'" @click:append="show2 = !show2">
+                                            </v-text-field>
+                                        </v-col>
+                                    </v-row>
+                                </v-container>
+                                <v-container>
+                                    <v-row>
+                                        <v-col class="col-12 col-md-6">
+                                            <v-text-field label="Company Name"></v-text-field>
+                                        </v-col>
+                                        <v-col class="col-12 col-md-6 p-0"></v-col>
+                                        <v-col class="col-12 col-md-6">
+                                            <v-select :items="industry" label="Industry"></v-select>
+                                        </v-col>
+                                        <v-col class="col-12 col-md-6">
+                                            <v-select :items="role" label="Role"></v-select>
+                                        </v-col>
+                                        <div class="btn btn-primary">Sign In</div>
+                                        <div class="my-2 col-12 px-0">
+                                            <span class="small-text"> Have no account? </span><a href="./SignUp.html"
+                                                class="color-one">Sign
+                                                Up</a>
+                                        </div>
+                                    </v-row>
+                                </v-container>
 
+                        </div>
                     </div>
+
 
                 </div>
             </div>
