--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <script src="https://kit.fontawesome.com/8ed589f1d4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
@@ -46,83 +49,95 @@
         </div>
 
     </div>
-    <div class="container mb-5 mt-0 my-md-5">
-        <div class="row justify-content-center">
-            <div class="col-11 col-md-7 col-lg-8">
-                <div class="row logSlider">
-                    <div class="px-3 py-5 pt-md-5 pb-md-0">
-                        <div class="row">
-                            <div class="col-12 text-left my-2 my-md-0">
-                                <h6><span class="pr-3">Sign In to</span> <span class="text-underline-one">Edit
-                                        Projects</span></h6>
-                            </div>
-                            <div class="col-12 imgContainer">
-                                <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
-                                    <img src="./assets/sliderImg1.png" alt="sliderimg"
-                                        class="img-fluid h-100 w-100 sliderImg">
-                                </div>
+    <v-app id="app">
+        <div class="container mb-5 mt-0 my-md-5">
+            <div class="row justify-content-center">
 
+                <div class="col-11 col-md-7 col-lg-8 px-1 px-md-5">
+                    <div class="row logSlider">
+                        <div class="px-3 py-5 pt-md-5 pb-md-0">
+                            <div class="row">
+                                <div class="col-12 text-left my-2 my-md-0">
+                                    <h6><span class="pr-3">Sign In to</span> <span class="text-underline-one">Edit
+                                            Projects</span></h6>
+                                </div>
+                                <div class="col-12 imgContainer">
+                                    <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
+                                        <img src="./assets/sliderImg1.png" alt="sliderimg"
+                                            class="img-fluid h-100 w-100 sliderImg">
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="px-3 py-5 pt-md-5 pb-md-0">
+                            <div class="row">
+                                <div class="col-12 text-left">
+                                    <h6><span class="pr-3">Sign In to</span><span class="text-underline-one">Add new
+                                            projcets</span></h6>
+                                </div>
+                                <div class="col-12 imgContainer">
+                                    <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
+                                        <img src="./assets/sliderImg2.jpg" alt="sliderimg"
+                                            class="img-fluid h-100 w-100 sliderImg">
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="px-3 py-5 pt-md-5 pb-md-0">
+                            <div class="row">
+                                <div class="col-12 text-left">
+                                    <h6><span class="pr-3">Sign In to</span> <span class="text-underline-one">Have a
+                                            Dashboard</span></h6>
+                                </div>
+                                <div class="col-12 imgContainer">
+                                    <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
+                                        <img src="./assets/sliderImg3.jpg" alt="sliderimg"
+                                            class="img-fluid h-100 w-100 sliderImg">
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="px-3 py-5 pt-md-5 pb-md-0">
-                        <div class="row">
-                            <div class="col-12 text-left">
-                                <h6><span class="pr-3">Sign In to</span><span class="text-underline-one">Add new
-                                        projcets</span></h6>
-                            </div>
-                            <div class="col-12 imgContainer">
-                                <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
-                                    <img src="./assets/sliderImg2.jpg" alt="sliderimg"
-                                        class="img-fluid h-100 w-100 sliderImg">
-                                </div>
+                </div>
 
-                            </div>
-                        </div>
+                <div class="col-11 col-md-5 col-lg-4 form-card border p-5">
+                    <h5>Create New Account!</h5>
+                    <div class="form-row">
+                        <v-form class="w-100">
+                            <v-container>
+                                <v-row>
+                                    <v-text-field label="Email">
+                                    </v-text-field>
+                                    <v-text-field label="Password" :append-icon="show1 ? 'mdi-eye' : 'mdi-eye-off'"
+                                        :type="show1 ? 'text' : 'password'" @click:append="show1 = !show1">
+                                    </v-text-field>
+                                    <div class="col-12 px-0 mx-0">
+                                        <p class="m-0 small-text color-one">
+                                            Forget Password?
+                                        </p>
+                                    </div>
+                                    <div class="col-12 px-0 mx-0 mt-0 pt-0 mt-md-5 pt-md-5">
+                                        <div class="btn btn-primary">Sign In</div>
+                                        <div class="my-2 col-12 px-0">
+                                            <span class="small-text"> Have no account? </span><a href="./SignUp.html"
+                                                class="color-one">Sign
+                                                Up</a>
+                                        </div>
+                                    </div>
+                                </v-row>
+                            </v-container>
+                        </v-form>
                     </div>
-                    <div class="px-3 py-5 pt-md-5 pb-md-0">
-                        <div class="row">
-                            <div class="col-12 text-left">
-                                <h6><span class="pr-3">Sign In to</span> <span class="text-underline-one">Have a
-                                        Dashboard</span></h6>
-                            </div>
-                            <div class="col-12 imgContainer">
-                                <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
-                                    <img src="./assets/sliderImg3.jpg" alt="sliderimg"
-                                        class="img-fluid h-100 w-100 sliderImg">
-                                </div>
 
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-11 col-md-5 col-lg-4 form-card border rounded p-5">
-                <h5>Welcome to ARooh!</h5>
-                <div class="mt-5 mb-2">
-                    <p class="text-muted mb-0">Username</p>
-                    <input type="text" class="form-control">
-                </div>
-                <div class="my-2">
-                    <p class="text-muted mb-0">Password</p>
-                    <input type="text" class="form-control">
-                </div>
-                <div class="mt-4">
-                    <p class="my-0 color-one small-text">Forgot Password?</p>
-                </div>
-
-                <div class="my-4">
-                    <a href="#" class="btn btn-primary"> Sign In</a>
-                </div>
-
-                <div class="my-2">
-                    <span class="small-text"> Have no account? </span><a href="./SignUp.html" class="color-one">Sign
-                        Up</a>
                 </div>
 
             </div>
         </div>
-    </div>
+    </v-app>
+
 
     <div class="container-fluid bg-black text-muted">
         <div class="row">
@@ -132,8 +147,8 @@
         </div>
     </div>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
@@ -145,6 +160,18 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+
+    <script>
+        new Vue({
+            el: '#app',
+            vuetify: new Vuetify(),
+            data: {
+                show1: false
+            }
+
+        })
+
+    </script>
     <script src="./js/main.js"></script>
 </body>
 
