custom scroll bar and colors

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
@@ -58,8 +59,9 @@
                         <div class="px-3 py-5 pt-md-5 pb-md-0">
                             <div class="row">
                                 <div class="col-12 text-left my-2 my-md-0">
-                                    <h6><span class="pr-3">Sign In to</span> <span class="text-underline-one">Edit
-                                            Projects</span></h6>
+                                    <div><span class="pr-3 mini-heading">Sign In to</span> <span
+                                            class="text-underline-one big-heading">Edit
+                                            Projects</span></div>
                                 </div>
                                 <div class="col-12 imgContainer">
                                     <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
@@ -73,8 +75,9 @@
                         <div class="px-3 py-5 pt-md-5 pb-md-0">
                             <div class="row">
                                 <div class="col-12 text-left">
-                                    <h6><span class="pr-3">Sign In to</span><span class="text-underline-one">Add new
-                                            projcets</span></h6>
+                                    <div><span class="pr-3 mini-heading">Sign In to</span><span
+                                            class="text-underline-one big-heading">Add new
+                                            projcets</span></div>
                                 </div>
                                 <div class="col-12 imgContainer">
                                     <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
@@ -88,8 +91,9 @@
                         <div class="px-3 py-5 pt-md-5 pb-md-0">
                             <div class="row">
                                 <div class="col-12 text-left">
-                                    <h6><span class="pr-3">Sign In to</span> <span class="text-underline-one">Have a
-                                            Dashboard</span></h6>
+                                    <div><span class="pr-3 mini-heading">Sign In to</span> <span
+                                            class="text-underline-one big-heading">Have a
+                                            Dashboard</span></div>
                                 </div>
                                 <div class="col-12 imgContainer">
                                     <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
