--- a/SignUp.html
+++ b/SignUp.html
@@ -16,6 +16,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <script src="https://kit.fontawesome.com/8ed589f1d4.js" crossorigin="anonymous"></script>
@@ -56,8 +57,9 @@
                         <div class="px-3 py-5 pt-md-5 pb-md-0">
                             <div class="row">
                                 <div class="col-12 text-left my-2 my-md-0">
-                                    <h6><span class="pr-3">Sign Up to</span> <span class="text-underline-one">Edit
-                                            Projects</span></h6>
+                                    <div><span class="pr-3 mini-heading">Sign Up to</span> <span
+                                            class="text-underline-one big-heading">Edit
+                                            Projects</span></div>
                                 </div>
                                 <div class="col-12 imgContainer">
                                     <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
@@ -71,8 +73,9 @@
                         <div class="px-3 py-5 pt-md-5 pb-md-0">
                             <div class="row">
                                 <div class="col-12 text-left">
-                                    <h6><span class="pr-3">Sign Up to</span><span class="text-underline-one">Add new
-                                            projcets</span></h6>
+                                    <div><span class="pr-3 mini-heading">Sign Up to</span><span
+                                            class="text-underline-one big-heading">Add new
+                                            projcets</span></div>
                                 </div>
                                 <div class="col-12 imgContainer">
                                     <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
@@ -86,7 +89,8 @@
                         <div class="px-3 py-5 pt-md-5 pb-md-0">
                             <div class="row">
                                 <div class="col-12 text-left">
-                                    <h6><span class="pr-3">Sign Up to</span> <span class="text-underline-one">Have a
+                                    <h6><span class="pr-3 mini-heading">Sign Up to</span> <span
+                                            class="text-underline-one big-heading">Have a
                                             Dashboard</span></h6>
                                 </div>
                                 <div class="col-12 imgContainer">
@@ -100,72 +104,74 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-11 col-md-8 p-5">
-                    <div class="col-12 form-card border test p-5">
-                        <h5>Create New Account!</h5>
-                        <div class="form-row">
-                            <v-form class="w-100">
-                                <v-container class="border-bottom">
-                                    <v-row>
-                                        <v-col class="col-12 col-md-6">
-                                            <v-text-field label="First name"></v-text-field>
-                                        </v-col>
-                                        <v-col class="col-12 col-md-6">
-                                            <v-text-field label="Last name"></v-text-field>
-                                        </v-col>
-                                        <div class="col-12 py-0 my-md-0">
-                                            <v-radio-group row>
-                                                <p class="m-0 pr-2 text-muted">Gender</p>
-                                                <div class="col-12 d-md-none"></div>
-                                                <v-radio label="Male"></v-radio>
-                                                <v-radio label="Female"></v-radio>
-                                            </v-radio-group>
-                                        </div>
-                                    </v-row>
-                                </v-container>
-                                <v-container class="border-bottom">
-                                    <v-row>
-                                        <v-col class="col-12 col-md-6">
-                                            <v-text-field label="Email"></v-text-field>
-                                        </v-col>
-                                        <v-col class="col-12 col-md-6">
-                                            <v-text-field label="Phone Number"></v-text-field>
-                                        </v-col>
-                                        <v-col class="col-12 col-md-6">
-                                            <v-text-field label="Password"
-                                                :append-icon="show1 ? 'mdi-eye' : 'mdi-eye-off'"
-                                                :type="show1 ? 'text' : 'password'" @click:append="show1 = !show1">
-                                            </v-text-field>
-                                        </v-col>
-                                        <v-col class="col-12 col-md-6">
-                                            <v-text-field label="Confirm Password"
-                                                :append-icon="show2 ? 'mdi-eye' : 'mdi-eye-off'"
-                                                :type="show2 ? 'text' : 'password'" @click:append="show2 = !show2">
-                                            </v-text-field>
-                                        </v-col>
-                                    </v-row>
-                                </v-container>
-                                <v-container>
-                                    <v-row>
-                                        <v-col class="col-12 col-md-6">
-                                            <v-text-field label="Company Name"></v-text-field>
-                                        </v-col>
-                                        <v-col class="col-12 col-md-6 p-0"></v-col>
-                                        <v-col class="col-12 col-md-6">
-                                            <v-select :items="industry" label="Industry"></v-select>
-                                        </v-col>
-                                        <v-col class="col-12 col-md-6">
-                                            <v-select :items="role" label="Role"></v-select>
-                                        </v-col>
-                                        <div class="btn btn-primary">Sign In</div>
-                                        <div class="my-2 col-12 px-0">
-                                            <span class="small-text"> Have no account? </span><a href="./SignUp.html"
-                                                class="color-one">Sign
-                                                Up</a>
-                                        </div>
-                                    </v-row>
-                                </v-container>
+                <div class="col-11 col-md-8 p-0 p-md-5">
+                    <div class="col-12 form-card border px-0">
+                        <div class="col-12 test p-5">
+                            <h5>Create New Account!</h5>
+                            <div class="form-row">
+                                <v-form class="w-100">
+                                    <v-container class="border-bottom">
+                                        <v-row>
+                                            <v-col class="col-12 col-md-6">
+                                                <v-text-field label="First name"></v-text-field>
+                                            </v-col>
+                                            <v-col class="col-12 col-md-6">
+                                                <v-text-field label="Last name"></v-text-field>
+                                            </v-col>
+                                            <div class="col-12 py-0 my-md-0">
+                                                <v-radio-group row>
+                                                    <p class="m-0 pr-2 text-muted">Gender</p>
+                                                    <div class="col-12 d-md-none"></div>
+                                                    <v-radio label="Male"></v-radio>
+                                                    <v-radio label="Female"></v-radio>
+                                                </v-radio-group>
+                                            </div>
+                                        </v-row>
+                                    </v-container>
+                                    <v-container class="border-bottom">
+                                        <v-row>
+                                            <v-col class="col-12 col-md-6">
+                                                <v-text-field label="Email"></v-text-field>
+                                            </v-col>
+                                            <v-col class="col-12 col-md-6">
+                                                <v-text-field label="Phone Number"></v-text-field>
+                                            </v-col>
+                                            <v-col class="col-12 col-md-6">
+                                                <v-text-field label="Password"
+                                                    :append-icon="show1 ? 'mdi-eye' : 'mdi-eye-off'"
+                                                    :type="show1 ? 'text' : 'password'" @click:append="show1 = !show1">
+                                                </v-text-field>
+                                            </v-col>
+                                            <v-col class="col-12 col-md-6">
+                                                <v-text-field label="Confirm Password"
+                                                    :append-icon="show2 ? 'mdi-eye' : 'mdi-eye-off'"
+                                                    :type="show2 ? 'text' : 'password'" @click:append="show2 = !show2">
+                                                </v-text-field>
+                                            </v-col>
+                                        </v-row>
+                                    </v-container>
+                                    <v-container>
+                                        <v-row>
+                                            <v-col class="col-12 col-md-6">
+                                                <v-text-field label="Company Name"></v-text-field>
+                                            </v-col>
+                                            <v-col class="col-12 col-md-6 p-0"></v-col>
+                                            <v-col class="col-12 col-md-6">
+                                                <v-select :items="industry" label="Industry"></v-select>
+                                            </v-col>
+                                            <v-col class="col-12 col-md-6">
+                                                <v-select :items="role" label="Role"></v-select>
+                                            </v-col>
+                                            <div class="btn btn-primary">Sign In</div>
+                                            <div class="my-2 col-12 px-0">
+                                                <span class="small-text"> Have no account? </span><a
+                                                    href="./SignUp.html" class="color-one">Sign
+                                                    Up</a>
+                                            </div>
+                                        </v-row>
+                                    </v-container>
 
+                            </div>
                         </div>
                     </div>
 
