font size and weight

--- a/SignUp.html
+++ b/SignUp.html
@@ -107,7 +107,7 @@
                 <div class="col-11 col-md-8 p-0 p-md-5">
                     <div class="col-12 form-card border px-0">
                         <div class="col-12 test p-5">
-                            <h5>Create New Account!</h5>
+                            <div class="big-heading">Create New Account!</div>
                             <div class="form-row">
                                 <v-form class="w-100">
                                     <v-container class="border-bottom">
