form to nav spacing
form and slider now have same spacing between them and the navabar

--- a/SignUp.html
+++ b/SignUp.html
@@ -105,9 +105,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-11 col-md-6 p-0">
+                <div class="col-11 col-md-6 p-0 px-md-5 form-container">
                     <div class="col-12 form-card border px-0">
-                        <div class="col-12 test p-5">
+                        <div class="col-12 p-5">
                             <div class="big-heading">Create New Account!</div>
                             <div class="form-row">
                                 <v-form class="w-100">
