--- a/SignUp.html
+++ b/SignUp.html
@@ -187,9 +187,9 @@
                                             </v-col>
                                             <div class="btn btn-primary">Sign In</div>
                                             <div class="my-2 col-12 px-0">
-                                                <span class="small-text"> Have no account? </span><a
+                                                <span class="small-text"> Have an account? </span><a
                                                     href="./SignUp.html" class="color-one">Sign
-                                                    Up</a>
+                                                    In</a>
                                             </div>
                                         </v-row>
                                     </v-container>
