slider animation on sign in page

--- a/index.html
+++ b/index.html
@@ -54,14 +54,24 @@
         <div class="container mb-5 mt-0 my-md-5">
             <div class="row justify-content-center">
 
+
+
                 <div class="col-11 col-md-7 col-lg-8 px-1 px-md-5">
                     <div class="row logSlider">
                         <div class="px-3 py-5 pt-md-5 pb-md-0">
                             <div class="row">
                                 <div class="col-12 text-left my-2 my-md-0">
-                                    <div><span class="pr-3 mini-heading">Sign In to</span> <span
-                                            class="text-underline-one big-heading">Edit
-                                            Projects</span></div>
+                                    <div>
+                                        <span class="pr-3 mini-heading">Sign Up to</span>
+                                        <div class="position-relative big-heading d-inline ml14 ">
+                                            <span class="text-wrapper">
+                                                <span class="letters">
+                                                    Edit Projects
+                                                </span>
+                                                <span class="line"></span>
+                                            </span>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col-12 imgContainer">
                                     <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
@@ -75,9 +85,16 @@
                         <div class="px-3 py-5 pt-md-5 pb-md-0">
                             <div class="row">
                                 <div class="col-12 text-left">
-                                    <div><span class="pr-3 mini-heading">Sign In to</span><span
-                                            class="text-underline-one big-heading">Add new
-                                            projcets</span></div>
+                                    <div><span class="pr-3 mini-heading">Sign Up to</span>
+                                        <div class="position-relative big-heading d-inline ml14 ">
+                                            <span class="text-wrapper">
+                                                <span class="letters">
+                                                    Add New Projects
+                                                </span>
+                                                <span class="line"></span>
+                                            </span>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col-12 imgContainer">
                                     <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
@@ -91,9 +108,16 @@
                         <div class="px-3 py-5 pt-md-5 pb-md-0">
                             <div class="row">
                                 <div class="col-12 text-left">
-                                    <div><span class="pr-3 mini-heading">Sign In to</span> <span
-                                            class="text-underline-one big-heading">Have a
-                                            Dashboard</span></div>
+                                    <div><span class="pr-3 mini-heading">Sign Up to</span>
+                                        <div class="position-relative big-heading d-inline ml14 ">
+                                            <span class="text-wrapper">
+                                                <span class="letters">
+                                                    Have A Dashboard
+                                                </span>
+                                                <span class="line"></span>
+                                            </span>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col-12 imgContainer">
                                     <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
@@ -176,6 +200,8 @@
         })
 
     </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
