adjustent to slider animation

--- a/SignUp.html
+++ b/SignUp.html
@@ -60,12 +60,9 @@
                                 <div class="col-12 text-left my-2 my-md-0">
                                     <div>
                                         <span class="pr-3 mini-heading">Sign Up to</span>
-                                        <div class="position-relative big-heading d-inline ml14 ">
+                                        <div class="position-relative big-heading d-inline-block ml9  ">
                                             <span class="text-wrapper">
-                                                <span class="letters">
-                                                    Edit Projects
-                                                </span>
-                                                <span class="line"></span>
+                                                <span class="letters">Edit Projects</span>
                                             </span>
                                         </div>
                                     </div>
@@ -83,12 +80,9 @@
                             <div class="row">
                                 <div class="col-12 text-left">
                                     <div><span class="pr-3 mini-heading">Sign Up to</span>
-                                        <div class="position-relative big-heading d-inline ml14 ">
+                                        <div class="position-relative big-heading d-inline-block ml9  ">
                                             <span class="text-wrapper">
-                                                <span class="letters">
-                                                    Add New Projects
-                                                </span>
-                                                <span class="line"></span>
+                                                <span class="letters">Add New Projects</span>
                                             </span>
                                         </div>
                                     </div>
@@ -106,12 +100,9 @@
                             <div class="row">
                                 <div class="col-12 text-left">
                                     <div><span class="pr-3 mini-heading">Sign Up to</span>
-                                        <div class="position-relative big-heading d-inline ml14 ">
+                                        <div class="position-relative big-heading d-inline-block ml9  ">
                                             <span class="text-wrapper">
-                                                <span class="letters">
-                                                    Have A Dashboard
-                                                </span>
-                                                <span class="line"></span>
+                                                <span class="letters">Have a Dashboard</span>
                                             </span>
                                         </div>
                                     </div>
